@@ -10,6 +10,8 @@ ver 0.22.4 (not yet released)
   - ffmpeg: detect the output sample format
 * output
   - moveoutput: fix always_on and tag lost on move
+* Android
+  - enable https:// support (via OpenSSL)
 
 ver 0.22.3 (2020/11/06)
 * playlist
